# git-mirror

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  appveyor.yml  flake.nix
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
ci/: before_deploy.ps1  before_deploy.sh  install.sh  script.sh
src/: error.rs  git.rs  lib.rs  main.rs
src/provider/: github.rs  gitlab.rs  mod.rs
tests/: cli.rs  do_mirror.rs  integration.rs
