[package]
name = "git-mirror"
version = "0.14.10"
authors = ["Pascal Bach <pascal.bach@nextrem.ch>"]
description = "Sync between different git repositories."
license = "MIT"
repository = "https://github.com/bachp/git-mirror"
keywords = ["git", "mirror", "sync"]
edition = "2021"
readme="README.md"

[features]

[dependencies]
time = "0.3"
log = "0.4"
env_logger = "0.10"
slug = "0.1"
rayon = "1.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
fs2 = "0.4"
prometheus = "0.13"
reqwest = {version = "0.11", features = ["native-tls-vendored", "blocking"] }
openssl-probe = "0.1"
junit-report = "0.8"
clap = { version = "4", features = [ "derive", "cargo", "env" ]}
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "2.0.9"
predicates = "3.0.1"

[profile.release]
lto = true
