[package]
name = "git-mirror"
version = "0.14.15"
authors = ["Pascal Bach <pascal.bach@nextrem.ch>"]
description = "Sync between different git repositories."
license = "MIT"
repository = "https://github.com/bachp/git-mirror"
keywords = ["git", "mirror", "sync"]
edition = "2024"
readme="README.md"

[features]

[dependencies]
time = "0.3"
log = "0.4"
env_logger = "0.11"
slug = "0.1"
rayon = "1.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
fs2 = "0.4"
prometheus = "0.14"
reqwest = {version = "0.12", features = ["native-tls-vendored", "blocking"] }
openssl-probe = "0.1"
junit-report = "0.8"
clap = { version = "4", features = [ "derive", "cargo", "env" ]}
thiserror = "2.0"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"

[profile.release]
lto = true
