[package]
name = "git-mirror"
version = "0.14.16"
authors = ["Pascal Bach <pascal.bach@nextrem.ch>"]
description = "Sync between different git repositories."
license = "MIT"
repository = "https://github.com/bachp/git-mirror"
keywords = ["git", "mirror", "sync"]
edition = "2024"
readme="README.md"

[features]

[dependencies]
time = "0.3.44"
log = "0.4.28"
env_logger = "0.11.8"
slug = "0.1.6"
rayon = "1.11.0"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
serde_yaml = "0.9.34-deprecated"
fs2 = "0.4.3"
prometheus = "0.14.0"
reqwest = {version = "0.12.25", features = ["native-tls-vendored", "blocking"] }
openssl-probe = "0.1.6"
junit-report = "0.8.3"
clap = { version = "4.5.53", features = [ "derive", "cargo", "env" ]}
thiserror = "2.0.17"
wait-timeout = "0.2.1"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"

[profile.release]
lto = true
